force-app/main/default/objects/Incident_ERC__c/Incident_ERC__c.object-meta.xml
<CustomObject>
    <label>Incident</label>
    <nameField>
        <displayFormat>INCD-{0000000}</displayFormat>
        <label>Incident Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incidents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>