force-app/main/default/objects/Incident_ERC__c/fields/Agents_Conclusion__c.field-meta.xml
<CustomField>
    <fullName>Agents_Conclusion__c</fullName>
    <label>Agent&apos;s Conclusion</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>