force-app/main/default/objects/Incident_ERC__c/fields/Flight_Date__c.field-meta.xml
<CustomField>
    <fullName>Flight_Date__c</fullName>
    <formula>Case__r.Flight_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flight Date</label>
    <type>Date</type>
</CustomField>