force-app/main/default/objects/Incident_ERC__c/fields/Flight_No__c.field-meta.xml
<CustomField>
    <fullName>Flight_No__c</fullName>
    <formula>Case__r.Flight_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flight No</label>
    <type>Text</type>
</CustomField>