force-app/main/default/objects/Incident_ERC__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <label>Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spouse 配偶</fullName>
            </value>
            <value>
                <fullName>Adult Offspring 成年子女</fullName>
            </value>
            <value>
                <fullName>Parents 父母親</fullName>
            </value>
            <value>
                <fullName>Stepparents 繼父母</fullName>
            </value>
            <value>
                <fullName>Legal Guardian 法定代理人</fullName>
            </value>
            <value>
                <fullName>Brother/Sister 兄弟姊妹</fullName>
            </value>
            <value>
                <fullName>Others 其他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>