force-app/main/default/objects/Incident_ERC__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Name__c</columns>
    <columns>Phone__c</columns>
    <columns>Case__c</columns>
    <columns>Relationship__c</columns>
    <columns>Flight_Date__c</columns>
    <columns>Description__c</columns>
    <columns>Agents_Conclusion__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>