force-app/main/default/objects/Incident_ERC__c/listViews/X2025_10_8_JX0000.listView-meta.xml
<ListView>
    <fullName>X2025_10_8_JX0000</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Name__c</columns>
    <columns>Phone__c</columns>
    <columns>Case__c</columns>
    <columns>Relationship__c</columns>
    <columns>Description__c</columns>
    <columns>Agents_Conclusion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Flight_Date__c</field>
        <operation>equals</operation>
        <value>10/8/2024</value>
    </filters>
    <label>2024/10/8 JX0000</label>
</ListView>